# coffee

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: config.py  llm.py  main.py
app/agents/: critic.py  input_parsing.py  orchestrator.py  profiler.py  recommendation.py
app/db/: connection.py  queries.py
app/db/migrations/: 001_init.sql
app/models/: __init__.py  bean_profile.py  recommendation.py  taste_profile.py
app/observability/: llm_logger.py  trace.py
app/tools/: detect_input.py  flavor_hierarchy.py  scorer.py  scraper.py  search.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  auth.ts  index.css  queries.ts  types.ts
frontend/src/components/: AddBeanForm.tsx  BeanTable.tsx  BeansPanel.tsx  CriticNotes.tsx  ErrorBanner.tsx  Header.tsx  LoginScreen.tsx  RecommendationsPanel.tsx  RecommendationsTable.tsx  Spinner.tsx  TasteProfilePanel.tsx
tests/: conftest.py  test_critic_agent.py  test_input_parsing.py  test_input_parsing_agent.py  test_profiler_agent.py  test_recommendation_agent.py  test_scorer.py  test_scraper.py
tests/fixtures/: sample_bean_profiles.json
tests/integration/: conftest.py  test_apis.py  test_critic.py  test_e2e.py  test_pipeline.py  test_recommendation.py
