[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coffee-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "beautifulsoup4",
    "anthropic",
    "asyncpg",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
