[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coffee-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "beautifulsoup4",
    "google-generativeai>=0.8",
    "asyncpg",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: hits real APIs, skipped by default (pass --integration to run)"]
